# es_la

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  code_format.sh
doc/: README.md  dense_matrices.md  matrix.md  synopsis.md  tags.md
doc/dense/: matrices.md  tags.md
doc/doxygen/: Doxyfile
doc/sphinx/: compile.sh  conf.py  index.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
include/es_la/: config.hpp  dense.hpp  dense_function.hpp  function.hpp  io.hpp  la.natvis  sparse.hpp  tags.hpp  type_traits.hpp
include/es_la/base/: aligned_malloc.hpp  assign.hpp  base.hpp  ct_shape.hpp  expr_base.hpp  expression.hpp  extended.hpp  forward.hpp  helper.hpp  matrix.hpp  matrix_base_dynamic.hpp  matrix_base_static.hpp  range_slice.hpp  shape.hpp  sub_expr.hpp  traits.hpp  type_traits.hpp
include/es_la/base/type_traits/: layout_tag.hpp  type_traits.hpp
include/es_la/core/: expression.hpp  forward.hpp  mkl_destructor.h  tags.hpp  type_traits.hpp
include/es_la/core/type_traits/: ct_extent.hpp  expr_storage.hpp  is_expression.hpp  is_scalar.hpp  numeric.hpp  operator.hpp  value.hpp
include/es_la/dense/: aligned_malloc.hpp  dense.hpp  expr.hpp  expression.hpp  extended.hpp  forward.hpp  function.hpp  matrix.hpp  matrix_base.dynamic.hpp  matrix_base.static.hpp  matrix_dynamic_base.hpp  operator.hpp  random_matrix.hpp  shape.hpp  shape_base.hpp  special.hpp  tags.hpp  type_traits.hpp  utility.hpp
include/es_la/dense/expr/: add.hpp  binary_expr.hpp  binary_expr.operators.hpp  functor.hpp  mul.hpp  operator_mul_eq.hpp  scalar_expr.hpp  scalar_expr.operators.hpp
include/es_la/dense/function/: base.hpp  convolution.hpp  cross.hpp  det.hpp  dot.hpp  eigenvalues.hpp  for_each_element.hpp  invert.hpp  make_matrix.hpp  norm1.hpp  norm2.hpp  norm_sup.hpp  sum.hpp
include/es_la/dense/functor/: fn.hpp  fn_expr_loop.hpp  fn_expr_mkl_mat_copy.hpp  fn_expr_mkl_mat_mul.hpp  fn_expr_mkl_vec_axpy.hpp  fn_scalar_loop.hpp  type_traits.hpp
include/es_la/dense/operator/: default_assign.hpp  mkl.hpp  mkl_matrix_copy.hpp
include/es_la/dense/special/: fn_matrix.hpp  frank_matrix.hpp  hilbert_matrix.hpp  random_matrix.hpp
include/es_la/dense/storage/: allocator.hpp  memory.hpp  storage.hpp  storage_dynamic.hpp  storage_static.hpp
include/es_la/dense/type_traits/: ct_extent.hpp  expr_storage.hpp  is_dense.hpp  is_dynamic_expr.hpp  is_expression.hpp  is_lvalue.hpp  is_lvalue_block.hpp  is_row_col_major.hpp  is_vector_expr.hpp  is_view.hpp  layout.hpp  mkl_decay.hpp  mkl_type.hpp  numeric.hpp  operator.hpp  traversal_order.hpp  value.hpp
include/es_la/dense/utility/: ct_extent.hpp  layout.hpp  mkl_destructor.hpp  mkl_helpers.hpp  mkl_overloads.hpp
include/es_la/dense/view/: diag_view.hpp  extent.hpp  range.hpp  slice.hpp  transposed_view.hpp  view.hpp
include/es_la/expr/: bin_expr.hpp  functor.hpp  unary_expr.hpp
include/es_la/expr/functor/: add_func.hpp  elementwise_func.hpp  mul_func.hpp  sub_func.hpp
include/es_la/function/: arithmetic.hpp  base.hpp  cross.hpp  dot.hpp  norm.hpp
include/es_la/io/: la_file.hpp  la_file_reader.hpp  la_file_writer.hpp  matfile.cpp  matfile.hpp  matfile_base.hpp  matfile_reader.hpp  matfile_writer.hpp  write_gnuplot_binary.hpp
include/es_la/solver/: pardiso_solver.hpp
include/es_la/sparse/: algorithm.hpp  csr_matrix.hpp  csr_pattern.hpp  forward.hpp  function.hpp  helpers.hpp  mkl_sparse_matrix.hpp  mkl_sparse_matrix.read_only.hpp  mkl_sparse_matrix.read_write.hpp  mkl_sparse_matrix_ext.hpp  operator.hpp  sparse_matrix.hpp  sparsity_pattern.hpp  tags.hpp  type_traits.hpp  utility.hpp
include/es_la/sparse/algorithm/: check.hpp
include/es_la/sparse/function/: check.hpp
include/es_la/sparse/functor/: fn_expr_mkl_sparse_mat_mul.hpp  type_traits.hpp
include/es_la/sparse/operator/: mkl_sparse_matrix.hpp
include/es_la/sparse/solver/: feast_interval_solver.hpp  feast_interval_solver_base.hpp  feast_solver2.hpp  pardiso_solver.hpp  pardiso_solver_base.hpp
include/es_la/sparse/type_traits/: ct_extent.hpp  expr_storage.hpp  is_csr_matrix.hpp  mkl_decay.hpp  operator.hpp  symmetry.hpp  symmetry_tag.hpp  value.hpp
include/es_la/sparse/utility/: mkl_helpers.hpp  mkl_overloads.hpp
include/es_la/storage/: allocator.hpp  memory.hpp  storage.hpp  storage_dynamic.hpp  storage_static.hpp
include/es_la/type_traits/: access_tag.hpp  numeric.hpp
include/es_la/util/: macros.hpp  mkl.hpp  type_traits.hpp
include/esl/: dense.hpp
include/esl/dense/: dense.hpp  expression.hpp  matrix_base.dynamic.hpp  matrix_base.static.hpp  matrix_dynamic_base.hpp
include/esl/dense/expr/: binary_expr.operators.hpp  mul.hpp  (+1 more)
include/esl/io/: matfile_reader.hpp  matfile_writer.hpp  printer.hpp
include/esl/sparse/: csr_matrix.hpp  csr_pattern.hpp  mkl_sparse_matrix.hpp  mkl_sparse_matrix_ext.hpp  tags.hpp
include/esl/util/: macros.hpp  mkl.hpp
pretty_printer/es_la/: printer.py
src/core/: mkl_destructor.cpp
src/dense/function/: convolution.cpp
src/dense/utility/: mkl_destructor.cpp  mkl_overloads.cpp
src/io/: matfile_writer.cpp
src/sparse/: helpers.cpp
src/sparse/algorithm/: check.cpp
src/sparse/function/: check.cpp
src/sparse/solver/: feast_interval_solver_base.cpp  feast_interval_solver_base.params.cpp  pardiso_solver_base.cpp  pardiso_solver_base.params.cpp
src/sparse/utility/: mkl_helpers.cpp  mkl_overloads.cpp
test/: LA._cpp  binary_expr.hpp  block_view.hpp  check_elements.hpp  es_la_test.cpp  esl_test.cpp  matrix_constructor.hpp  matrix_view.hpp  non_trivial.hpp  type_string.hpp  type_traits.hpp
(+38 files in other folders)
